💄(ademe) fix background color of active pagination item
Currently, active pagination item has a black background that does not fit with
the global website color palette. We replace this black color by dark-aquarime
in order to harmonize color palette.

--- a/sites/ademe/src/frontend/scss/extras/colors/_theme.scss
+++ b/sites/ademe/src/frontend/scss/extras/colors/_theme.scss
@@ -276,7 +276,7 @@ $r-theme: map-merge(
       item-background: r-color('white'),
       item-border: r-color('silver'),
       current-color: r-color('white'),
-      current-background: r-color('dark-two'),
+      current-background: r-color('dark-aquamarine'),
     ),
     person-glimpse: (
       card-background: r-color('white'),
